--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/>
-    <application
+    <uses-permission android:name="android.permission.ACTIVITY_RECOGNITION"/>
+
+    <application android:name=".application.BenchApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -19,14 +21,14 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Sensors"
+        android:theme="@style/Theme.Bench"
         tools:targetApi="31">
         <activity
             android:name="com.xdjbx.bench.ui.activity.NotifierActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:exported="false"
             android:label="@string/title_activity_notifier"
-            android:theme="@style/Theme.Sensors.Fullscreen" />
+            android:theme="@style/Theme.Bench.Fullscreen" />
         <activity
             android:name="com.xdjbx.bench.ui.activity.MainActivity"
             android:exported="true">
@@ -40,6 +42,12 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+        <service android:name=".service.DeviceService"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="com.xdjbx.bench.DeviceService" />
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
